# vs-fltk

./: .gitignore  Doxyfile  MILESTONES.md  README.md  RELEASE.md  SECURITY.md  THANKS.md  TODO.md  com.karurochari.vs.yml  drizzle.config.ts  log.txt  meson.build  meson.options  meson2.build  mkdocs.yml  package.json  tsconfig.json
.format/: README.md
.github/workflows/: Brewfile  build.yml  docker-test.yml  docker.yml  docs.yml  format.yml  release.yml
benchmark/: massif_wrap.sh  meson.build  valgrind_wrap.sh
bindings/: README.md
bindings/quickjs/: fltk.d.ts  vs.js
commons/: .gitignore  HELP.md  editor.xml  hub.xml  not-found.xml  vs
commons/components/: not-implemented.xml
commons/configs/: default.xml
commons/migrations/: 0000_clever_kitty_pryde.sql  0000_flawless_meltdown.sql  0001_silent_lester.sql  0001_unique_thunderbolt.sql
commons/schemas/: .gitignore  json-component.schema.json  widget.schema.json
commons/templates/: widget.html5.xml
commons/themes/: default.xml
components/: README.md  meson.build
docker/: .env.example  Dockerfile  README.md  default-entry.sh  docker-compose.yml  entry-build.sh  entry-common.sh  entry-default.sh  entrypoint.sh  main_entry.sh  shell-entry.sh
docs/: LICENCE.md  auto-ui-actions.md  env-vars.md  faq.md  for-developers.md  for-users.md  index.installed-only.md  index.md  milestones.md  safety-policies.md  specs.md  static-templates.md
docs/architecture/: pipelines.md  storage.md
docs/developers/: building.md  code-gen.md  contributing.md  full-specs.md  index.md  releasing.md  todo.md  versioning.md
docs/full-specs/: data.md  index.md  paths.md  scripting.md  settings.md  templating.md
docs/ideas/: app-keys.md  auto-ui-actions.md  caching.md  path-finding.md  revised-namespaces.md  sandboxing.md  static-templates.md
docs/old-technical/: differences.md  specs.md  two-pass.md  xml-format.md
docs/releases/: v0.1.1-alpha.md
docs/users/: env-vars.md
examples/: custom-fields.xml  demo-c-test.xml  demo-c.xml  demo-js.xml  example-0.xml  markdown.xml  module-example-btn.xml  module-example-root.xml  parallel-loader.xml  test-templ.tvs  test-templ.vs  test-with-schemas.xml  two-buttons.xml  xml-ns.xml
examples/full-app-1/: meson.build
examples/native-app/: a.out  app.cpp  app.h  make.sh  test.c
examples/parallel-loading/: app.xml  component-1.xml  component-3.xml
examples/static-building/: data.xml  template.xml
experiments/: meson.build  parse-elf.cpp  preprocessor.cpp  riscv.cpp  test-enums.cpp  test-parallel-load.cpp  test-riscv.cpp  test-xml-as-map.cpp
experiments/riscv/: main.c  start.c  syscalls.h
flatpak/: .gitignore  README.md  com.karurochari.vs.yml  make.sh
include/: actions.hpp  app.hpp  blobs.h  config.h  fetcher.hpp  globals.hpp  loader.hpp  meson.build  settings.hpp  singletons.hpp  tcc-wrap.hpp  ui-base.hpp  ui-field.types.hpp  ui-fields.hpp  ui-frame-public.hpp  ui-frame.hpp  ui-frame.private.hpp  ui-tree.hpp  ui-tree.native.hpp  ui-tree.wasm.hpp  ui-tree.xml.hpp  ui.hpp  version.hpp  xml2component.hpp  xml2native.hpp
include/cache/: commons.hpp  kv-storage.hpp  memory-storage.hpp  res-storage.hpp  secrets.hpp
include/cbindings/: README.md  component.h  module.modulemap  vs.h
include/components/: README.md  containers.hpp  markdown-view.hpp
include/pipelines/: commons.hpp  lua-lua.hpp  quickjs-js.hpp  tcc-c.hpp
include/resolvers/: fs.hpp  http.hpp
include/themes/: default-cute.hpp
include/ui-tree/: cnative.hpp  dylib.hpp  xml.hpp
include/utils/: actions.hpp  app-env.hpp  env.hpp  paths.hpp  policies.hpp  policies.internal.hpp  resources.hpp  settings.hpp  strings.hpp  system.hpp  tcc-wrap.hpp
include/widgets/: containers.hpp  data.hpp
metadata/: meson.build  metainfo.xml
schemas/: README.md  vs-ns.json
schemas/components/: fl:base.json  fl:button.json  fl:button.toggle.json  fl:flex.json  fl:grid.json  fl:group.json  fl:image.json.tmp  fl:input.json  fl:label.json  fl:pack.json  fl:scroll.json  fl:scroll.json-1  fl:textbox.json  fl:window.json  fl_widgets.json
schemas/db/: apps.ts  bookmarks.ts  cache.ts  logs.ts  permanent.ts  policies.ts  secrets-shared.ts  secrets.ts  secrets_shared.ts  storage_kv.ts  storage_res.ts
schemas/db.seeding/: index.ts
schemas/policies/: fields.schema.json  rule-sets.json
schemas/widgets/: fl:base.json  fl:button.json  fl:button.toggle.json  fl:flex.json  fl:grid.json  fl:group.json  fl:input.json  fl:label.json  fl:pack.json  fl:scroll.json  fl:textbox.json  fl:window.json
schemas/xml-specs/: test.xml  vs-components.xsd
scripts/: build-default.sh  gen-commons.sh  gen-commons.ts  gen-release.ts  prepare-release.ts
scripts/codegen/: components-new.schema.ts  components.schema.ts  enum.schema.ts  gen-components-new.tsx  gen-components.standalone.ts  gen-components.standalone.tsx  gen-components.ts  gen-components.tsx  gen-enums.ts  gen-ns-strings.ts  gen-policies.tsx  gen-widgets.tsx  index.ts  vs-elements.ts  widget.schema.ts
src/: blobs.c  fetcher.cpp  globals.cpp  loader.cpp  singletons.cpp  tcc-wrap.cpp  ui-base.cpp  ui-field.types.cpp  ui-fields.cpp  ui-frame.cpp  ui-tree.cnative.cpp  ui-tree.cpp  ui-tree.dylib.cpp  ui-tree.symbols.cpp  ui-tree.wasm.cpp  ui-tree.xml.cpp  ui.cpp  ui.props-dispatchers.cpp  ui.template-builders.cpp  xml2native.cpp
src/app/: README.md  main.cpp
src/cache/: kv-storage.cpp  memory-storage.cpp  res-storage.cpp  secrets.cpp
src/cbindings/: vs.cpp
src/pipelines/: lua-lua.cpp  (+2 more)
subprojects/: .gitignore  cello.wrap  fmt.wrap  frozen.wrap  hashlib.wrap  libfltk.wrap  libhttp.wrap  libriscv.wrap  libsodium.wrap  libtcc-riscv64.wrap  libtcc.wrap  magic_enum.wrap  md4c.wrap  mio.wrap  quickjs.wrap  sqlite3.wrap  tree-sitter.wrap  vs-templ.wrap  wamr.wrap
subprojects/packagefiles/cello/: meson.build
subprojects/packagefiles/libsodium/: meson.build
subprojects/packagefiles/libtcc/: config.h  meson.build
test/: README.md  meson.build  path-resolver.cpp
test/fullstack/example-full/: README.md  actions.xml  main.xml  meson.build
test/marginal/: meson.build  resolver-paths.cpp
(+60 files in other folders)
