option('tests', type: 'boolean', value: true)

option('use_curl', type: 'boolean', value: true)

option('use_tcc', type: 'boolean', value: true)
option('use_quickjs', type: 'boolean', value: true)
option('use_wamr', type: 'boolean', value: true)

# Only one between lua and luajit should be enabled
option('use_lua', type: 'boolean', value: true)
option('use_luajit', type: 'boolean', value: false)

# If present, else build it manually
option('use_system_fltk', type: 'boolean', value: true)
option('use_system_pugixml', type: 'boolean', value: false)

option('force_x11_backend', type: 'boolean', value: false)