option('tests', type: 'boolean', value: true)
option('benchmarks', type: 'boolean', value: true)

option('use_networking_curl', type: 'boolean', value: true)
option('use_networking_simple', type: 'boolean', value: false)

option('use_tcc', type: 'boolean', value: true)
option('use_quickjs', type: 'boolean', value: true)
option('use_wamr', type: 'boolean', value: false)
option('use_riscv_vm', type: 'boolean', value: true)

# Only one between lua and luajit should be enabled if any
option('use_lua_base', type: 'boolean', value: true)
option('use_lua_jit', type: 'boolean', value: false)

# If present, else build it manually
option('use_system_fltk', type: 'boolean', value: true)
option('use_system_pugixml', type: 'boolean', value: false)

# For MacOS targets when vendoring fltk, to force it using X11 and not the native stack
option('force_x11_backend', type: 'boolean', value: false)