shared_library(
    'static-for',
    ['./static-for.cpp'],
    dependencies: [
        libfltk_dep,
    ],
    include_directories: include_dirs,
    link_with: [vs_fltk],
)

shared_library(
    'static-if',
    ['./static-if.cpp'],
    dependencies: [
        libfltk_dep,
    ],
    include_directories: include_dirs,
    link_with: [vs_fltk],
)