shared_library(
    'static-for',
    ['./dyn-for.cpp'],
    dependencies: [
        libfltk_dep,
    ],
    include_directories: include_dirs,
    link_with: [vs_fltk],
)

shared_library(
    'static-if',
    ['./dyn-if.cpp'],
    dependencies: [
        libfltk_dep,
    ],
    include_directories: include_dirs,
    link_with: [vs_fltk],
)