executable(
    'test-enums',
    ['./test-enums.cpp'],
    dependencies: [],
    override_options: ['c_std=c11', 'cpp_std=c++20'],
    install: false,
)

executable(
    'test-parallel-load',
    ['./test-parallel-load.cpp'],
    dependencies: [pugixml_dep],
    override_options: ['c_std=c11', 'cpp_std=c++20'],
    install: false,
)

executable(
    'test-xml-as-map',
    ['./test-xml-as-map.cpp'],
    dependencies: [pugixml_dep],
    override_options: ['c_std=c11', 'cpp_std=c++20'],
    install: false,
)